# serialization-benchmarks

./: .gitignore  CMakeLists.txt  NOTICE  config.h.cmake
cmake/: CustomMacros.cmake  FindLibAvro.cmake
src/: CMakeLists.txt  bench_avro.c  bench_enc.c  bench_enc.h  bench_events_protobuf.cc  bench_media_avro.c  bench_media_protobuf.cc  bench_protobuf.cc  bench_speed1_protobuf.cc  btimer.h  events.proto  protobuf.cc  protobuf.h
templates/: bench.c  bench.cc
